fixed alignment addChair

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,5 +27,5 @@ code {
 }
 
 .techChair {
-  height: 90vh;
+  height: 70vh;
 }
